style: :lipstick: Importação dos arquivos de estilo e foi trocada font-family da aplicação

--- a/assets/css/global/global.css
+++ b/assets/css/global/global.css
@@ -12,6 +12,7 @@ html,
 body {
     background: #070b1d;
     color: #ffffff;
+    font-family: sans-serif;
     font-size: 16px;
     height: 100%;
     width: 100%;
